// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateRangePicker > should allow update selected date range 1`] = `
<div class="v-sheet v-theme--light elevation-24 v-picker v-picker--with-actions v-date-picker v-date-picker--month" style="max-width: 350px;">
  <!---->
  <div class="v-picker__body">
    <div class="v-date-picker-controls">
      <button class="v-btn v-theme--light v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-text v-date-picker-controls__month-btn" type="button">
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span class="v-btn__content" data-no-activator>August 2024</span>
        <!---->
        <!---->
      </button>
      <button class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text v-date-picker-controls__mode-btn" type="button">
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span class="v-btn__content" data-no-activator>
          <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7,10L12,15L17,10H7Z" />
            </svg>
          </i>
        </span>
        <!---->
        <!---->
      </button>
      <div class="v-spacer"></div>
      <div class="v-date-picker-controls__month">
        <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" disabled type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
      </div>
    </div><transition-stub appear="false" css="true" name="fade-transition" persisted="false">
      <div class="v-date-picker-month">
        <!---->
        <transition-stub appear="false" css="true" name="picker-transition" persisted="false">
          <div class="v-date-picker-month__days">
            <div class="v-date-picker-month__day v-date-picker-month__weekday">S</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">M</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">T</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">W</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">T</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">F</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">S</div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-start">
              <!---->
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent">
              <!---->
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent">
              <!---->
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent">
              <!---->
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>1</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>2</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>3</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>4</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>5</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>6</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>7</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>8</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>9</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>10</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>11</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>12</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>13</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>14</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>15</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>16</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>17</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>18</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>19</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>20</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>21</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>22</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>23</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>24</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>25</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>26</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>27</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>28</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>29</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>30</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>31</span>
                <!---->
                <!---->
              </button>
            </div>
          </div>
        </transition-stub>
      </div>
    </transition-stub>
  </div>
  <div class="v-picker__actions">
    <button class="v-btn v-btn--disabled v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" disabled type="button">
      <span class="v-btn__overlay"></span>
      <span class="v-btn__underlay"></span>
      <!---->
      <span class="v-btn__content" data-no-activator>Cancel</span>
      <!---->
      <!---->
    </button>
    <button class="v-btn v-btn--disabled v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" disabled type="button">
      <span class="v-btn__overlay"></span>
      <span class="v-btn__underlay"></span>
      <!---->
      <span class="v-btn__content" data-no-activator>OK</span>
      <!---->
      <!---->
    </button>
  </div>
</div>
`;

exports[`DateRangePicker > should allow update selected date range 2`] = `
<div class="v-sheet v-theme--light elevation-24 v-picker v-picker--with-actions v-date-picker v-date-picker--month" style="max-width: 350px;">
  <!---->
  <div class="v-picker__body">
    <div class="v-date-picker-controls">
      <button class="v-btn v-theme--light v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-text v-date-picker-controls__month-btn" type="button">
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span class="v-btn__content" data-no-activator>August 2024</span>
        <!---->
        <!---->
      </button>
      <button class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text v-date-picker-controls__mode-btn" type="button">
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span class="v-btn__content" data-no-activator>
          <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7,10L12,15L17,10H7Z" />
            </svg>
          </i>
        </span>
        <!---->
        <!---->
      </button>
      <div class="v-spacer"></div>
      <div class="v-date-picker-controls__month">
        <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" disabled type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
      </div>
    </div><transition-stub appear="false" css="true" name="fade-transition" persisted="false">
      <div class="v-date-picker-month">
        <!---->
        <transition-stub appear="false" css="true" name="picker-transition" persisted="false">
          <div class="v-date-picker-month__days">
            <div class="v-date-picker-month__day v-date-picker-month__weekday">S</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">M</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">T</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">W</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">T</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">F</div>
            <div class="v-date-picker-month__day v-date-picker-month__weekday">S</div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-start">
              <!---->
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent">
              <!---->
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent">
              <!---->
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent">
              <!---->
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>1</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>2</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>3</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>4</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>5</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>6</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>7</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>8</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>9</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>10</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>11</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>12</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>13</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>14</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>15</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>16</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>17</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>18</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>19</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--selected">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>20</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>21</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-outlined v-date-picker-month__day-btn" type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>22</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>23</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>24</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-start">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>25</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>26</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>27</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>28</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>29</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>30</span>
                <!---->
                <!---->
              </button>
            </div>
            <div class="v-date-picker-month__day v-date-picker-month__day--week-end">
              <button class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn" disabled type="button">
                <span class="v-btn__overlay"></span>
                <span class="v-btn__underlay"></span>
                <!---->
                <span class="v-btn__content" data-no-activator>31</span>
                <!---->
                <!---->
              </button>
            </div>
          </div>
        </transition-stub>
      </div>
    </transition-stub>
  </div>
  <div class="v-picker__actions">
    <button class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" type="button">
      <span class="v-btn__overlay"></span>
      <span class="v-btn__underlay"></span>
      <!---->
      <span class="v-btn__content" data-no-activator>Cancel</span>
      <!---->
      <!---->
    </button>
    <button class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" type="button">
      <span class="v-btn__overlay"></span>
      <span class="v-btn__underlay"></span>
      <!---->
      <span class="v-btn__content" data-no-activator>OK</span>
      <!---->
      <!---->
    </button>
  </div>
</div>
`;

exports[`DateRangePicker > should allow update selected date range 3`] = `
<div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field" style="max-width: 350px;">
  <div class="v-input__prepend">
    <!---->
    <i aria-hidden="false" aria-label=" prepended action" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" tabindex="0">
      <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" />
      </svg>
    </i>
  </div>
  <div class="v-input__control">
    <div aria-controls="v-menu-2" aria-expanded="true" aria-haspopup="menu" class="v-field v-field--active v-field--center-affix v-field--dirty v-field--no-label v-field--variant-filled v-theme--light v-field--focused v-locale--is-ltr">
      <div class="v-field__overlay"></div>
      <div class="v-field__loader">
        <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
          <!---->
          <div class="v-progress-linear__background"></div>
          <div class="v-progress-linear__buffer" style="width: 0%;"></div>
          <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
            <div class="v-progress-linear__indeterminate">
              <div class="v-progress-linear__indeterminate long"></div>
              <div class="v-progress-linear__indeterminate short"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <div class="v-field__field" data-no-activator>
        <!---->
        <!---->
        <!---->
        <div class="v-field__input" data-no-activator>
          <!---->
          <!--teleport start-->
          <!--teleport end-->
          <!---->
          <input aria-describedby="input-0-messages" id="input-0" placeholder="mm/dd/yyyy" size="1" test-id="vuetify-date-range-picker" type="text" value="08/15/2024 - 08/22/2024">
        </div>
        <!---->
      </div>
      <!---->
      <!---->
      <div class="v-field__outline">
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div aria-live="polite" class="v-input__details" id="input-0-messages" role="alert">
    <transition-group-stub appear="false" class="v-messages" css="true" name="slide-y-transition" persisted="false" tag="div">
      <!---->
    </transition-group-stub>
    <!---->
  </div>
</div>
`;

exports[`DateRangePicker > should provide correct props to date range component 1`] = `<v-date-input disabled="false" elevation="24" label max="Thu Aug 22 2024 17:30:00 GMT+0530 (India Standard Time)" max-width="350px" min="Mon Jan 01 2024 00:00:00 GMT+0530 (India Standard Time)" modelvalue="Thu Aug 15 2024 00:00:00 GMT+0530 (India Standard Time),Fri Aug 16 2024 00:00:00 GMT+0530 (India Standard Time),Sat Aug 17 2024 00:00:00 GMT+0530 (India Standard Time),Sun Aug 18 2024 00:00:00 GMT+0530 (India Standard Time),Mon Aug 19 2024 00:00:00 GMT+0530 (India Standard Time),Tue Aug 20 2024 00:00:00 GMT+0530 (India Standard Time),Wed Aug 21 2024 00:00:00 GMT+0530 (India Standard Time),Thu Aug 22 2024 00:00:00 GMT+0530 (India Standard Time)" multiple="range" rules="(updatedInput) => !!updatedInput" test-id="vuetify-date-range-picker"></v-date-input>`;

exports[`DateRangePicker > should render date range with selected last 7 days by default 1`] = `
<div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field" style="max-width: 350px;">
  <div class="v-input__prepend">
    <!---->
    <i aria-hidden="false" aria-label=" prepended action" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" tabindex="0">
      <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" />
      </svg>
    </i>
  </div>
  <div class="v-input__control">
    <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--no-label v-field--variant-filled v-theme--light v-locale--is-ltr">
      <div class="v-field__overlay"></div>
      <div class="v-field__loader">
        <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
          <!---->
          <div class="v-progress-linear__background"></div>
          <div class="v-progress-linear__buffer" style="width: 0%;"></div>
          <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
            <div class="v-progress-linear__indeterminate">
              <div class="v-progress-linear__indeterminate long"></div>
              <div class="v-progress-linear__indeterminate short"></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <div class="v-field__field" data-no-activator>
        <!---->
        <!---->
        <!---->
        <div class="v-field__input" data-no-activator>
          <!---->
          <!---->
          <!---->
          <input aria-describedby="input-0-messages" id="input-0" placeholder="mm/dd/yyyy" size="1" test-id="vuetify-date-range-picker" type="text" value="08/15/2024 - 08/22/2024">
        </div>
        <!---->
      </div>
      <!---->
      <!---->
      <div class="v-field__outline">
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div aria-live="polite" class="v-input__details" id="input-0-messages" role="alert">
    <transition-group-stub appear="false" class="v-messages" css="true" name="slide-y-transition" persisted="false" tag="div">
      <!---->
    </transition-group-stub>
    <!---->
  </div>
</div>
`;
